2007-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Check dp->todo before using (est)->dp.

2007-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (default_device_start): Overwrite label only
						      if mode == ACCESS_WRITE.


2007-11-20  Ian Turner <ian@zmanda.com>
	* device-src/device.c, device-src/device.h
	  device-src/tape-device.c, device-src/rait-device.c: Change API
	  semantics with respect to label reading. This patch makes it
	  possible to open and read a volume with properties while only
	  reading its label once. Thanks to Jean-Louis Martineau
	  <martineau@zmanda.com> for suggesting this change.

2007-11-20  Ian Turner <ian@zmanda.com>
	* device-src/vfs-device.c: Be more thourough about updating volume
	  usage statistics.

2007-11-20  Ian Turner <ian@zmanda.com>
	* changer-src/chg-lib.sh.in: Use a more robust check for MT path.
	* server-src/amverify.sh.in: Use amrestore instead of amdd/ammt.

2007-11-09  Ian Turner <ian@zmanda.com>
	* server-src/taperscan.c: Fix a memory allocation bug and be a little
	  more paranoid.

2007-11-06  Ian Turner <ian@zmada.com>
	* server-src/taperscan.c: Print a proper message if there is
	  only one flag from device_read_label().

2007-11-26  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/config.m4 common-src/genversion.c
	  common-src/Makefile.am: explicitly generate svn info at configure
	  time, rather than relying on svn keywords

2007-11-26  Ian Turner <ian@zmanda.com>
	* server-src/Makefile.am: Move amdevcheck from libexec/ to sbin/.
	  Thanks to Satya Ganga <gsat@zmanda.com> for noticing this problem.
	
2007-11-26  John Franks <jrfranks@zmanda.com>
	* common-src/debug.c	For cygwin builds: change to
	  close and reopen log file handle on successful rename.
	  This is to ensure that Windows has no possibility of
	  preventing access to the original file name if processes
	  collide.
		